# claude-mcp-generator

./: .eslintrc.js  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
scripts/: test-setup.js
src/: cli.js  index.js
src/generators/: claude-settings.js  mcp-server.js
src/utils/: hooks-manager.js  permission-manager.js  repository-manager.js  workspace-detector.js  workspace-scanner.js
templates/: project-types.js
tests/fixtures/: Cargo.toml  git-config-sample.txt  lerna.json  monorepo-package.json  nx.json  package.json  pyproject.toml  requirements.txt  sample-claude-config.json
tests/fixtures/mcp-server-templates/: nodejs-server.js  python-server.py
tests/helpers/: test-utils.js
tests/integration/: cli.test.js
tests/unit/: claude-settings-generator.test.js  repository-manager.test.js  workspace-detector.test.js
